@@ -1,0 +1,4 @@
+<% days = capture do %>
+  Dreamy days
+<% end %>
+<%= days %>
